# Algorithms

./: CMakeLists.txt  Example.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
algo/: IncreasingSequence.cpp  Kmp.cpp  SegTree.cpp  Z-func.cpp
